# alf

./: .buildinfo  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  genindex.html  index.html  objects.inv  paper_links.html  search.html  searchindex.js  terminology.html
_sources/: terminology.rst.txt
docs/: bitloss_findings.txt
docs/source/: conf.py  index.rst  paper_links.rst
layers/: conv.html  pool.html
libalf/: CMakeLists.txt  libalf.cpp
libalf/include/: alf_types.h  libalf.h  line_filter.h  parser.h  shunting_yard.h
libalf/src/: libalf.cpp  line_filter.cpp  parser.cpp  shunting_yard.cpp
src/: alf.cpp  line_filter.cpp  main.cpp
tests/: CMakeLists.txt  infile.txt  shuntingyard.cpp  test_add_implied_and.cpp  test_algebraic_parser.cpp  test_arg_parser.cpp  test_arg_parser_complex.cpp  test_argument_parser.cpp  test_filters.cpp  test_shunting_yard.cpp
